Move logic to ports